--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.4.0"
     repositories {
-        google()
+        maven{ url'https://maven.aliyun.com/repository/google' }
+        maven{ url'https://maven.aliyun.com/repository/central' }
+        maven{ url'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven{ url'https://maven.aliyun.com/repository/public'}
         jcenter()
     }
     dependencies {
@@ -16,8 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        maven{ url'https://maven.aliyun.com/repository/google' }
+        maven{ url'https://maven.aliyun.com/repository/central' }
+        maven{ url'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven{ url'https://maven.aliyun.com/repository/public'}
+
     }
 }
 
